--- a/payment.html
+++ b/payment.html
@@ -100,7 +100,7 @@
   	<div class="row content">
         <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
           <!--START Content Div-->
-            <div class="row" id="filingbasisabde">
+            <div class="row">
                 <div class="col-xs-12">
                     <div class="row">
                         <section class="col-xs-12 steps breadcrumb-steps" aria-label="progress tracker">
