Grid View + Minor
All but headline Accordions, 44(d) and 44(e) input fields

--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -284,15 +284,15 @@
                                                         </div>
                                                         <div id="yesspecimentwo" class="form-group form-group-md"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6">
-                                                                <p id="upimagetwo">Provide an image of your specimen:</p>
+                                                                <p id="upimagefour">Provide an image of your specimen:</p>
                                                                 <div>
                                                                     <label class="small upload-drop-zone" for="specimentwofile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Drag and drop files or click here to upload.</label>
                                                                     <input type="file" id="specimentwofile" name="specimentwofileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
                                                                 </div><!-- Drop Zone -->
                                                             </div>
                                                             <div class="col-xs-12 col-md-6">
-                                                                <label for="specdescriptwo">Provide a description of your specimen:</label> 
-                                                                <textarea id="specdescriptwo" class="form-control"></textarea>
+                                                                <label for="specdescriptfour">Provide a description of your specimen:</label> 
+                                                                <textarea id="specdescriptfour" class="form-control"></textarea>
                                                             </div>
                                                         </div>
                                                         <div class="col-xs-12 form-group form-group-md">
