--- a/gridview_all.html
+++ b/gridview_all.html
@@ -134,7 +134,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2 four done">
+                                <div class="col-xs-2 four active">
                                     <div class="row">
                                         <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                             <span>4</span>
@@ -144,7 +144,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2 five done">
+                                <div class="col-xs-2 five">
                                     <div class="row">
                                         <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                             <span>5</span>
@@ -154,7 +154,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2 six active">
+                                <div class="col-xs-2 six">
                                     <div class="row">
                                         <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                             <span>6</span>
@@ -230,7 +230,6 @@
                                                 <label class="form-check-label form-check" for="fr44eclass025col"><span class="radio notspecial">&nbsp;</span></label>
                                             </td>
                                           </tr>
-                                          
                                           <tr>
                                             <td>
                                             	Aprons
@@ -319,7 +318,30 @@
                                                 <label class="form-check-label form-check" for="fr44eclass016gs1"><span class="radio notspecial">&nbsp;</span></label>
                                             </td>
                                           </tr>
-                                      </table>
+                                          <!--<tr class='foreignapp'>
+                                          	<td colspan='5'>
+                                            	<div class='form-group'>
+                                                	<div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
+                                                    	<label for='country'>Foreign Application Country</label>
+                                                        <select class='form-control' id='country'>
+                                                          <option value='Select'>Select</option>
+                                                          <option value='Mexico'>Mexico</option>
+                                                          <option value='Canada'>Canada</option>
+                                                          <option value='United Kingdom'>United Kingdom</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
+                                                    	<label for='foreignappno'>Foreign Application Number</label>
+                                                        <input type='textarea' class='form-control' id='foreignappno' value=''>
+                                                    </div>
+                                                    <div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
+                                                        <label for='foreignappdate'>Foreign Application Filing Date</label>
+                                                        <input type='date' class='form-control' id='foreignappdate' value=''>
+                                                    </div>
+                                           		</div>
+                                         	</td>
+                                     	</tr>-->
+                                   	</table>
                                 </div>
                     </div><!--END col-->
                 </div><!--END row-->                    
