--- a/gridview_all.html
+++ b/gridview_all.html
@@ -318,11 +318,11 @@
                                                 <label class="form-check-label form-check" for="fr44eclass016gs1"><span class="radio notspecial">&nbsp;</span></label>
                                             </td>
                                           </tr>
-                                          <!--<tr class='foreignapp'>
+                                          <!--<tr class='foreignregi'>
                                           	<td colspan='5'>
                                             	<div class='form-group'>
                                                 	<div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
-                                                    	<label for='country'>Foreign Application Country</label>
+                                                    	<label for='country'>Foreign Registration Country</label>
                                                         <select class='form-control' id='country'>
                                                           <option value='Select'>Select</option>
                                                           <option value='Mexico'>Mexico</option>
@@ -331,12 +331,19 @@
                                                         </select>
                                                     </div>
                                                     <div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
-                                                    	<label for='foreignappno'>Foreign Application Number</label>
+                                                    	<label for='foreignappno'>Foreign Registration Number</label>
                                                         <input type='textarea' class='form-control' id='foreignappno' value=''>
                                                     </div>
                                                     <div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
-                                                        <label for='foreignappdate'>Foreign Application Filing Date</label>
+                                                        <label for='foreignappdate'>Foreign Registration Exp. Date</label>
                                                         <input type='date' class='form-control' id='foreignappdate' value=''>
+                                                    </div>
+                                                    <div class='col-xs-12 col-md-6 col-lg-6 form-group form-group-md'>
+                                                    	<p id='upimage'>Provide an image of your specimen:</p>
+                                                        <div>
+                                                        	<label class='small upload-drop-zone' for='specimenfile' id='upimg'><span class='glyphicon glyphicon-upload' aria-hidden='true'></span> <br>Drag and drop files or click here to upload.</label>
+                                                            <input type='file' id='specimenfile' class='form-control' aria-labelledby='upimg upimage'>
+                                                        </div>
                                                     </div>
                                            		</div>
                                          	</td>
