Mark Design with Text Toggle + Flag Updates

--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -168,6 +168,13 @@
                 </section>
             </div>
           	<h1>Trademark Details &#8211; Design with Text</h1>
+            <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
+            <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                <label class="switch">
+                <input class="togglesavemore" type="checkbox">
+                <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                </label>
+            </div>
           	<!--START Trademark Examples-->
               <!--START Standard Character-->
                     <div class="row">
@@ -232,7 +239,7 @@
                                                         </div><!--END radiogroup-->
                                                         <div id="yesprior" role="region" aria-labelledby="prioreg" class="form-group form-group-md row">
                                                             <div class="form-group form-group-md col-xs-12 col-sm-8" id="copy">
-                                                                <label for="yesprior">Enter prior U.S. registration numbers.</label>
+                                                                <label for="yesprior">Enter prior U.S. registration numbers. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                 <input type="text" class="form-control" id="yesprior">
                                                             </div>
                                                             <div class="appenddocket"></div>
