--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -168,6 +168,13 @@
                 </div>
                 <h1>Trademark Details &#8211; Design Only</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
+                <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
+                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                    <label class="switch">
+                    <input class="togglesavemore" type="checkbox">
+                    <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                    </label>
+                </div>
                 <!--START Trademark Details Design with Text-->
                 <div class="row">
                     <div class="col-xs-12">
