--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -188,7 +188,7 @@
                            <fieldset>
                            	<div class="row">
                                 <div class="form-group form-group-md col-xs-12">
-                                    <p class="required weight600" aria-level="3"><span class="weight600">&#42;</span> Mark Literal <span class="label label-info subtle visuallyremoved">Reduce Fee</span></p>
+                                    <p class="required weight600" aria-level="3"><span class="weight600">&#42;</span> Mark Literal</p>
                                     <label for="ta2">Enter the words, letters and numbers appearing in the mark. <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
@@ -214,7 +214,7 @@
                                                             <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta2" class="save"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>  
+                                                            <label for="ta2" class="save">Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
